<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>${groupId}</groupId>
    <artifactId>${artifactId}</artifactId>
    <version>${version}</version>
    <packaging>nbm</packaging>

    <name>${artifactId}</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.netbeans.api</groupId>
            <artifactId>org-netbeans-api-annotations-common</artifactId>
            <version>${netbeansVersion}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.netbeans.utilities</groupId>
                <artifactId>nbm-maven-plugin</artifactId>
                <version>4.7</version>
                <extensions>true</extensions>
            </plugin>

            <plugin>
                <!-- NetBeans 13+ requires JDK 11+ -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.9.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>
                        --add-opens=java.base/java.net=ALL-UNNAMED
                        --add-opens=java.base/java.lang.ref=ALL-UNNAMED
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.security=ALL-UNNAMED
                        --add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED
                        --add-opens=java.desktop/javax.swing.text=ALL-UNNAMED
                        --add-opens=java.desktop/javax.swing=ALL-UNNAMED
                        --add-opens=java.desktop/java.awt=ALL-UNNAMED
                        --add-opens=java.desktop/java.awt.event=ALL-UNNAMED
                        --add-opens=java.prefs/java.util.prefs=ALL-UNNAMED
                        --add-opens=jdk.jshell/jdk.jshell=ALL-UNNAMED
                        --add-modules=jdk.jshell
                        --add-exports=java.desktop/sun.awt=ALL-UNNAMED
                        --add-exports=java.desktop/java.awt.peer=ALL-UNNAMED
                        --add-exports=java.desktop/com.sun.beans.editors=ALL-UNNAMED
                        --add-exports=java.desktop/sun.swing=ALL-UNNAMED
                        --add-exports=java.desktop/sun.awt.im=ALL-UNNAMED
                        --add-exports=java.desktop/com.sun.java.swing.plaf.motif=ALL-UNNAMED
                        --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
                        --add-exports=java.management/sun.management=ALL-UNNAMED
                        --add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
                        --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
                        --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                        --add-exports=jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED
                        --add-exports=jdk.jdeps/com.sun.tools.javap=ALL-UNNAMED
                        --add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED
                        --add-opens=java.desktop/javax.swing.plaf.synth=ALL-UNNAMED
                        --add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED
                        --add-opens=java.desktop/sun.awt.shell=ALL-UNNAMED
                        --add-opens=java.desktop/sun.awt.im=ALL-UNNAMED
                        --add-opens=java.base/java.nio=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <!-- to have the jar plugin pickup the nbm generated manifest -->
                    <archive>
                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
